@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>207</width>
-            <height>425</height>
+            <width>303</width>
+            <height>409</height>
         </rect>
     </property>
     <property name="caption">
